syntax = "proto3";

package jedi;

enum PayloadFormat {
    PAYLOAD_UNKNOWN = 0;
    JSON = 1;
    FLEX = 2;
    PROTOBUF = 3;
    FLATBUFFER = 4;
}

enum MessageKind {
    // ───── Verbs (Bits 0–7)
    UNKNOWN         = 0;
    ADD             = 1;
    READ            = 2;
    GET             = 4;
    SET             = 8;
    DEL             = 16;
    STREAM          = 32;
    GROUP           = 64;
    LIST            = 128;

    // ───── Intent / Message Metadata (Bits 8–15)
    ACTION          = 256;
    MESSAGE         = 512;
    INFO            = 1024;
    DEBUG           = 2048;
    ERROR           = 4096;
    AUTH            = 8192;
    HEARTBEAT       = 16384;

    // ───── System Targets / Routing (Bits 16–23)
    CONFIG_UPDATE   = 32768;
    REDIS           = 65536;
    SUPABASE        = 131072;
    FILESYSTEM      = 262144;
    WEBSOCKET       = 524288;
    HTTP_API        = 1048576;
    LOCAL_CACHE     = 2097152;
    AI              = 4194304;

    // ───── Reserved / Future Use (Bits 24–31)
    EXTERNAL        = 8388608;
    RESERVED_25     = 16777216;
    RESERVED_26     = 33554432;
    RESERVED_27     = 67108864;
    RESERVED_28     = 134217728;
    RESERVED_29     = 268435456;
    RESERVED_30     = 536870912;
    RESERVED_31     = 1073741824;
}

message JediEnvelope {
    int32 version = 1;
    MessageKind kind = 2;
    PayloadFormat format = 3;
    bytes payload = 4;
    bytes metadata = 5;
}


message FlagEnvelope {
    int32 flag = 1;
    bytes payload = 2;
}

message FlexEnvelope {
    MessageKind kind = 1;
    bytes payload = 2;
}

message RawEnvelope {
    bytes key = 1;
    bytes payload = 2;
}

message JediMessage {
    oneof envelope {
        JediEnvelope hybrid = 1;
        FlexEnvelope flex = 2;
        RawEnvelope raw = 3;
        FlagEnvelope flag = 4;
    }
}